# mlflow-monitoring

./: .gitignore  pyproject.toml
notebooks/: rag-evaluation-llama2.ipynb  rag_evaluation_with_mlflow.ipynb
