[tool.poetry]
name = "mlflow-monitoring"
version = "0.1.0"
description = ""
authors = ["David Silva <dfhssilva@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
mlflow = "^2.17.0"
langchain-aws = "^0.2.2"
faiss-cpu = "^1.9.0"
boto3 = "^1.35.44"
tiktoken = "^0.8.0"
evaluate = "^0.4.3"
textstat = "^0.7.4"
transformers = "^4.45.2"
torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-2.5.0%2Bcpu-cp312-cp312-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
]
ragas = "^0.2.1"
nltk = "^3.9.1"



[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
